--- a/addons/website_hr_recruitment/static/src/scss/website_hr_recruitment.scss
+++ b/addons/website_hr_recruitment/static/src/scss/website_hr_recruitment.scss
@@ -1,25 +1,37 @@
-.o_website_hr_recruitment_jobs_list {
-    #jobs_grid_left {
-        ul.flex-column > li.nav-item > a {
-            padding: .5rem 1rem;
-            border-radius: 0.125rem;
-        }
-    }
-    .card {
-        padding: 15px;
-        box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.17);
+@mixin o_website_hr_recruitment_hover {
+    transition: .5s;
 
-        &:hover {
-            transition: box-shadow 0.3s cubic-bezier(0.55, 0, 0.1, 1);
-            box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1), 0 2px 2px 0 rgba(0, 0, 0, 0.05);
-        }
+    &:hover {
+        transform: scale(1.01, 1.01);
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.25) !important;
+
+    }
+}
+
+.o_website_hr_recruitment_jobs_list {
+    #jobs_grid {
         .o_job_infos {
             .fa {
-                color: map-get($theme-colors, 'primary');
-                margin-right: 8px;
+                color: theme-color('secondary');
+                margin-right: .5rem;
             }
         }
+
+        .card {
+            &, * {
+                transition: all .1s;
+            }
+
+            &:hover {
+                box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1), 0 2px 2px 0 rgba(0, 0, 0, 0.05);
+            }
+        }
+
+        .o_jobs_unpublished {
+            opacity: .6;
+        }
     }
+
     .o_website_hr_recruitment_job_description {
         //The ellipsis may not be supported on all platforms, the text will just break for them
         max-height: 60px; //Limit to 3 lines
@@ -35,5 +47,39 @@
         -ms-box-orient: vertical;
         box-orient: vertical;
         overflow: hidden;
+    }
+}
+
+.o_jobs_topbar_filters {
+    .dropdown-toggle {
+        .fa {
+            margin-right: .4em;
+        }
+
+        &:after {
+            margin-left: 1.2em;
+        }
+    }
+
+    .dropdown-menu {
+        margin-top: $navbar-padding-y;
+        min-width: 12rem;
+    }
+}
+
+.o_jobs_image_gallery {
+    &.s_image_gallery {
+        img {
+            @include o_website_hr_recruitment_hover;
+        }
+    }
+}
+
+#jobs_section,
+#jobs_thankyou {
+    .s_company_team {
+        .o_jobs_hr_recruiter {
+            @include o_website_hr_recruitment_hover;
+        }
     }
 }
