--- a/addons/account/wizard/account_payment_register_views.xml
+++ b/addons/account/wizard/account_payment_register_views.xml
@@ -26,12 +26,8 @@
                     <field name="available_payment_method_line_ids" invisible="1"/>
                     <field name="available_partner_bank_ids" invisible="1"/>
                     <field name="company_currency_id" invisible="1"/>
-                    <field name="has_epd_and_is_in_time" invisible="1"/>
                     <field name="show_early_pay_discount_button" invisible="1"/>
-                    <field name="payment_difference"/>
-                    <field name="can_edit_wizard"/>
-                    <field name="can_group_payments"/>
-                    <field name="group_payment"/>
+                    <field name="discounted_amount" invisible="1"/>
 
                     <group>
                         <group name="group1">
@@ -54,8 +50,10 @@
                                        required="1"
                                        options="{'no_create': True, 'no_open': True}"
                                        groups="base.group_multi_currency"/>
-                                <button attrs="{'invisible': [('show_early_pay_discount_button', '=', False)]}" name="fill_in_with_early_pay_discount" string="Discount" type="object" class="btn btn-secondary float-end"/>
+
                             </div>
+                            <field name="early_pay_discount_toggle_button"
+                                    attrs="{'invisible':[('show_early_pay_discount_button', '=', False)]}"/>
                             <field name="payment_date"/>
                             <field name="communication"
                                    attrs="{'invisible': ['|', ('can_edit_wizard', '=', False), '&amp;', ('can_group_payments', '=', True), ('group_payment', '=', False)]}"/>
