--- a/addons/account_edi/views/account_move_views.xml
+++ b/addons/account_edi/views/account_move_views.xml
@@ -9,6 +9,7 @@
             <field name="domain">[('move_id', '=', active_id), ('error', '!=', False)]</field>
         </record>
 
+        <!-- TODO in loca -->
         <record id="view_out_invoice_tree_inherit" model="ir.ui.view">
             <field name="name">account.move.tree.inherit</field>
             <field name="model">account.move</field>
@@ -20,6 +21,7 @@
             </field>
         </record>
 
+        <!-- TODO in loca -->
         <record id="view_out_credit_note_tree_inherit" model="ir.ui.view">
             <field name="name">account.move.tree.inherit</field>
             <field name="model">account.move</field>
@@ -31,6 +33,7 @@
             </field>
         </record>
 
+        <!-- TODO in loca -->
         <record id="view_account_invoice_filter" model="ir.ui.view">
             <field name="name">account.invoice.select.inherit</field>
             <field name="model">account.move</field>
@@ -42,6 +45,7 @@
             </field>
         </record>
 
+        <!-- done -->
         <record id="view_move_form_inherit" model="ir.ui.view">
             <field name="name">account.move.form.inherit</field>
             <field name="model">account.move</field>
@@ -94,6 +98,7 @@
                         </div>
                     </div>
                 </xpath>
+                <!-- TODO in loca -->
                 <xpath expr="//div[@name='journal_div']" position="after">
                     <field name="edi_state" attrs="{'invisible': ['|', ('edi_state', '=', False), ('state', '=', 'draft')]}"/>
                 </xpath>
@@ -102,6 +107,10 @@
                           string="EDI Documents"
                           groups="base.group_no_one"
                           attrs="{'invisible': [('edi_document_ids', '=', [])]}">
+                        <group string="Electronic Data Interchange" attrs="{'invisible': [('compatible_edi_ids', '=', [])]}">
+                            <field name="compatible_edi_ids" invisible="1" />
+                            <field name="edi_format_ids" widget="many2many_checkboxes"/>
+                        </group>
                         <field name="edi_document_ids" options="{'no_open': '1'}">
                             <tree create="false" delete="false" edit="false" decoration-danger="error">
                                 <field name="name"/>
