--- a/addons/account/views/account_journal_views.xml
+++ b/addons/account/views/account_journal_views.xml
@@ -151,6 +151,10 @@
                                             <field name="alias_name" class="oe_inline"/>@<field name="alias_domain" class="oe_inline" readonly="1"/>
                                         </div>
                                     </group>
+                                    <group string="Electronic Data Interchange" attrs="{'invisible': [('compatible_edi_ids', '=', [])]}">
+                                        <field name="compatible_edi_ids" invisible="1" />
+                                        <field name="edi_format_ids" widget="many2many_checkboxes"/>
+                                    </group>
                                     <!-- email alias end -->
                                     <group string="Payment Communications" attrs="{'invisible': [('type', '!=', 'sale')]}">
                                         <field name="invoice_reference_type"/>
