--- a/addons/account/views/account_move_views.xml
+++ b/addons/account/views/account_move_views.xml
@@ -557,6 +557,13 @@
             </field>
         </record>
 
+        <record id="action_open_edi_documents" model="ir.actions.act_window">
+            <field name="name">Electronic invoicing</field>
+            <field name="res_model">account.edi.document</field>
+            <field name="view_mode">tree</field>
+            <field name="domain">[('move_id', '=', active_id), ('error', '!=', False)]</field>
+        </record>
+
         <record id="view_move_form" model="ir.ui.view">
             <field name="name">account.move.form</field>
             <field name="model">account.move</field>
@@ -605,6 +612,18 @@
                                 attrs="{'invisible' : ['|', '|', ('id', '=', False), ('state', '!=', 'draft'),('move_type', '!=', 'entry')]}"/>
                         <button name="button_cancel" string="Cancel" type="object" groups="account.group_account_invoice" data-hotkey="w"
                                 attrs="{'invisible' : ['|', '|', ('id', '=', False), ('state', '!=', 'draft'),('move_type', '==', 'entry')]}"/>
+                        <field name="edi_show_cancel_button" invisible="1"/>
+                        <field name="edi_show_abandon_cancel_button" invisible="1"/>
+                        <button name="button_cancel_posted_moves"
+                                string="Request EDI Cancellation"
+                                type="object"
+                                groups="account.group_account_invoice"
+                                attrs="{'invisible' : [('edi_show_cancel_button', '=', False)]}"/>
+                        <button name="button_abandon_cancel_posted_posted_moves"
+                                string="Call off EDI Cancellation"
+                                type="object"
+                                groups="account.group_account_invoice"
+                                attrs="{'invisible' : [('edi_show_abandon_cancel_button', '=', False)]}"/>
                         <button name="button_draft" string="Reset to Draft" type="object" groups="account.group_account_invoice"
                                 attrs="{'invisible' : [('show_reset_to_draft_button', '=', False)]}" data-hotkey="q" />
                         <!-- Set as Checked -->
@@ -612,6 +631,37 @@
                                 attrs="{'invisible' : [('to_check', '=', False)]}" data-hotkey="k" />
                         <field name="state" widget="statusbar" statusbar_visible="draft,posted"/>
                     </header>
+                    <field name="edi_blocking_level" invisible="1" />
+                    <field name="edi_error_count" invisible="1" />
+                    <div class="alert alert-info" role="alert" style="margin-bottom:0px;"
+                        attrs="{'invisible': ['|', ('edi_web_services_to_process', 'in', ['', False]), ('state', '=', 'draft')]}">
+                         <div>The invoice will be processed asynchronously by the following E-invoicing service :
+                            <field name="edi_web_services_to_process" class="oe_inline"/>
+                         </div>
+                         <button name="action_process_edi_web_services" type="object" class="oe_link" string="Process now" />
+                    </div>
+                    <div class="alert alert-danger" role="alert" style="margin-bottom:0px;"
+                        attrs="{'invisible': ['|', ('edi_error_count', '=', 0), ('edi_blocking_level', '!=', 'error')]}">
+                        <div class="o_row">
+                            <field name="edi_message" />
+                            <button name="%(action_open_edi_documents)d" string="⇒ See errors" type="action" class="oe_link" attrs="{'invisible': [('edi_error_count', '=', 1)]}" />
+                            <button name="action_retry_edi_documents_error" type="object" class="oe_link oe_inline" string="Retry" />
+                        </div>
+                    </div>
+                    <div class="alert alert-warning" role="alert" style="margin-bottom:0px;"
+                        attrs="{'invisible': ['|', ('edi_error_count', '=', 0), ('edi_blocking_level', '!=', 'warning')]}">
+                        <div class="o_row">
+                            <field name="edi_message" />
+                            <button name="%(action_open_edi_documents)d" string="⇒ See errors" type="action" class="oe_link" attrs="{'invisible': [('edi_error_count', '=', 1)]}" />
+                        </div>
+                    </div>
+                    <div class="alert alert-info" role="alert" style="margin-bottom:0px;"
+                        attrs="{'invisible': ['|', ('edi_error_count', '=', 0), ('edi_blocking_level', '!=', 'info')]}">
+                        <div class="o_row">
+                            <field name="edi_message" />
+                            <button name="%(action_open_edi_documents)d" string="⇒ See errors" type="action" class="oe_link" attrs="{'invisible': [('edi_error_count', '=', 1)]}" />
+                        </div>
+                    </div>
                     <!-- Invoice outstanding credits -->
                     <div groups="account.group_account_invoice,account.group_account_readonly"
                          class="alert alert-warning mb-0" role="alert"
@@ -1214,6 +1264,30 @@
                                         <field name="to_check"/>
                                     </group>
                                 </group>
+                            </page>
+                            <page id="edi_documents"
+                                  string="EDI Info"
+                                  groups="base.group_no_one"
+                                  attrs="{'invisible': [('edi_format_ids', '=', [])]}">
+                                <group string="Electronic Data Interchange" attrs="{'invisible': [('compatible_edi_ids', '=', [])]}">
+                                    <field name="compatible_edi_ids" invisible="1" />
+                                    <field name="edi_format_ids" widget="many2many_checkboxes"/>
+                                </group>
+                                <field name="edi_document_ids" options="{'no_open': '1'}" attrs="{'invisible': [('edi_document_ids', '=', [])]}">
+                                    <tree create="false" delete="false" edit="false" decoration-danger="message">
+                                        <field name="name"/>
+                                        <field name="edi_format_name"/>
+                                        <field name="write_date" eval="strftime('%d/%m/%Y %H:%M:%S')" optional="hide"/>
+                                        <field name="message" invisible="1"/>
+                                        <field name="blocking_level" invisible="1"/>
+                                        <button name="action_export_xml"
+                                                type="object"
+                                                class="oe_link oe_inline"
+                                                string="Download"
+                                                groups="base.group_no_one"
+                                                attrs="{'invisible': ['|', ('message', '=', False), ('blocking_level', '=', 'info')]}"/>
+                                    </tree>
+                                </field>
                             </page>
                             <page id="other_tab_entry" string="Other Info" name="other_info"
                                   attrs="{'invisible': [('move_type', '!=', 'entry')]}">
