--- a/addons/mrp/views/product_views.xml
+++ b/addons/mrp/views/product_views.xml
@@ -15,6 +15,9 @@
                     <label for="days_to_prepare_mo" attrs="{'invisible':[('type','=','service')]}"/>
                     <div attrs="{'invisible':[('type','=','service')]}">
                         <field name="days_to_prepare_mo" class="oe_inline"/> days
+                        <button name="action_compute_bom_days" string="Compute from BoM" type="object" attrs="{'invisible':[('type', '=', 'service')]}"
+                                help="Compute the days required to resupply all components from BoM, by either buying or manufacturing the components and/or subassemblies."
+                                class="oe_link oe_read_only pt-0"/>
                     </div>
                 </xpath>
                 <xpath expr="//field[@name='product_variant_count']" position="after">
