--- a/addons/account/views/account_payment_term_views.xml
+++ b/addons/account/views/account_payment_term_views.xml
@@ -102,6 +102,45 @@
                             The last line's computation type should be "Balance" to ensure that the whole amount will be allocated.
                         </p>
                         <field name="line_ids"/>
+
+                        <!-- ============================== Early payment section ============================== -->
+                        <field name="early_payment_applicable" invisible="1"/>
+                        <div attrs="{'invisible':[('early_payment_applicable','=',False)]}">
+                            <field name="has_early_payment"/>
+                            <label for="has_early_payment"/>
+                            <div attrs="{'invisible':[('has_early_payment','=',False)]}">
+                                <div class="row mt-2">
+                                    <div class="col-2">
+                                        <strong><label for="percentage_to_discount"/></strong>
+                                    </div>
+                                    <div class="col-1">
+                                        <field name="percentage_to_discount"/>
+                                    </div>
+                                    <div class="col-1 oe_inline">
+                                        <span>%</span>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-2">
+                                        <strong><label for="discount_computation"/></strong>
+                                    </div>
+                                    <div class="col-4">
+                                        <field name="discount_computation"/>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-2">
+                                        <strong><label for="discount_time_availability"/></strong>
+                                    </div>
+                                    <div class="col-1">
+                                        <field name="discount_days"/>
+                                    </div>
+                                    <div class="col-3">
+                                        <field name="discount_time_availability"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </sheet>
                 </form>
             </field>
