[FIX] website: fix js cookies bar

--- a/addons/website/static/src/snippets/s_popup/001.scss
+++ b/addons/website/static/src/snippets/s_popup/001.scss
@@ -75,6 +75,12 @@
 
         .modal-content {
             pointer-events: auto;
+            overflow: auto;
+            max-height: 100%;
+        }
+
+        .modal-dialog {
+            height: 100%;
         }
     }
 }
