--- a/addons/hr_holidays/views/resource_views.xml
+++ b/addons/hr_holidays/views/resource_views.xml
@@ -41,8 +41,11 @@
             </xpath>
             <xpath expr="//field[@name='date_to']" position="after">
                 <field name="company_id" column_invisible="True"/>
-                <xpath expr="//field[@name='calendar_id']" position="move"/>
+                <xpath expr="//field[@name='calendar_ids']" position="move"/>
             </xpath>
+            <field name="calendar_ids" position="attributes">
+                <attribute name="optional">hidden</attribute>
+            </field>
         </field>
     </record>
 
@@ -51,7 +54,7 @@
         <field name="res_model">resource.calendar.leaves</field>
         <field name="view_mode">tree</field>
         <field name="view_id" ref="resource_calendar_leaves_tree_inherit"/>
-        <field name="domain">['&amp;', ('resource_id', '=', False), ('calendar_id', 'in', (active_id, False))]</field>
+        <field name="domain">['&amp;', ('resource_id', '=', False), ('calendar_ids', 'in', (active_id, False))]</field>
         <field name="context">{
             'default_calendar_id': active_id,
             'search_default_filter_date': True}</field>
@@ -87,5 +90,16 @@
         <field name="view_id" ref="resource_calendar_leaves_tree_inherit"/>
         <field name="context">{
             'search_default_filter_date': True}</field>
+    </record>
+
+    <record model="ir.actions.server" id="action_resource_calendar_leaves_duplicate">
+        <field name="name">Duplicate</field>
+        <field name="model_id" ref="model_resource_calendar_leaves"/>
+        <field name="binding_model_id" ref="model_resource_calendar_leaves" />
+        <field name="state">code</field>
+        <field name="code">
+            if records:
+                records.copy()
+        </field>
     </record>
 </odoo>
