[IMP] website, website_sale_*: remove old templates
This commit removes the following templates:
- template_header_slogan
- template_header_contact
- template_header_boxed
- template_header_centered_logo
- template_header_image
- template_header_hamburger_full
- template_header_magazine

task-3060986

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -55,7 +55,7 @@ $-seen-urls: ();
     // 3) The values in the $colors map are also printed by Bootstrap. However,
     // we have color variables which can contain a reference to a color
     // combination and that is the info we want in that case.
-    @each $key in ('menu', 'header-boxed', 'footer', 'copyright') {
+    @each $key in ('menu', 'footer', 'copyright') {
         $-value: map-get($o-color-palette, $key);
         @if type-of($-value) == 'number' {
             @include print-variable($key, $-value);
@@ -1304,48 +1304,6 @@ header {
                         position: static;
                     }
                 }
-            }
-        }
-    }
-} @else if o-website-value('header-template') == 'boxed' {
-    #wrapwrap:not(.o_header_overlay) .o_header_boxed_background {
-        @include o-apply-colors('header-boxed');
-        @include o-apply-colors('header-boxed-custom');
-        @include o-add-gradient('header-boxed-gradient');
-    }
-} @else if o-website-value('header-template') == 'centered_logo' {
-    header .o_header_centered_logo {
-        @include media-breakpoint-up(lg) {
-            width: 50%;
-        }
-    }
-} @else if o-website-value('header-template') == 'hamburger-full' {
-    @if not $-off-canvas-hamburger {
-        @include media-breakpoint-up(md) {
-            #wrapwrap {
-                $o-hamburger-full-navbar-height: $o-theme-navbar-logo-height + ($navbar-padding-y * 2);
-                > header {
-                    .navbar-collapse {
-                        max-height: unset;
-
-                        > .container {
-                            height: calc(100vh - #{$o-hamburger-full-navbar-height});
-                            transition: height .3s ease;
-                        }
-                        .nav-link {
-                            padding-right: $nav-link-padding-x;
-                            padding-left: $nav-link-padding-x;
-                        }
-                        .dropdown-menu {
-                            position: absolute;
-                        }
-                    }
-                }
-            }
-        }
-        @include media-breakpoint-up(lg) {
-            #wrapwrap > header #top_menu {
-                align-items: center !important;
             }
         }
     }
