[IMP] website, website_sale_*: stretch header
task-3060986

--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -70,6 +70,17 @@
             </t>
         </xpath>
     </template>
+    
+    <template id="template_header_stretch" inherit_id="website.template_header_stretch">
+        <xpath expr="//t[@t-call='website.header_social_links_no_color']" position="before">
+            <t t-call="website_sale.header_cart_link">
+                <t t-set="_icon" t-value="True"/>
+                <t t-set="_item_class" t-value="'border-start o_border_contrast'"/>
+                <t t-set="_link_class" t-value="'o_navlink_background_hover btn position-relative d-flex align-items-center h-100 p-2 rounded-0 text-reset'"/>
+                <t t-set="_badge_class" t-value="'rounded'"/>
+            </t>
+        </xpath>
+    </template>
 
     <!-- Search Bar input-group template -->
     <template id="search" name="Search Box" active="True">
